# dso

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  build.sh  build_doc.sh
app/: main.cc  main_dso_pangolin.cc
config/: calib.txt  config.yaml
include/full_system/: full_system.h  immature_point.h  pixel_selector.h  pixel_selector2.h  residual_projections.h  residuals.h
include/full_system/hessian_blocks/: calib_hessian.h  frame_frame_pre_calc.h  frame_hessian.h  hessian_blocks.h  point_hessian.h
include/full_system/initializer/: coarse_initializer.h  flann_point_cloud.h  pnt.h
include/full_system/tracker/: coarse_distance_map.h  coarse_tracker.h
include/io_wrapper/: image_display.h  image_rw.h  output_3d_wrapper.h
include/io_wrapper/output_wrapper/: pointcloud_output_wrapper.h  sample_output_wrapper.h
include/io_wrapper/pangolin/: keyframe_display.h  pangolin_dso_viewer.h
include/optimization_backend/: accumulated_sc_hessian_sse.h  accumulated_top_hessian_sse.h  raw_residual_jacobian.h
include/optimization_backend/accumulators/: accumulator_11.h  accumulator_14.h  accumulator_9.h  accumulator_approx.h  accumulator_x.h  accumulator_xx.h  matrix_accumulators.h
include/optimization_backend/energy_functional/: ef_frame.h  ef_point.h  ef_residual.h  energy_functional.h  energy_functional_structs.h
include/undistorter/: photometric_undistorter.h  undistorter.h  undistorter_equidistant.h  undistorter_fov.h  undistorter_kb.h  undistorter_pinhole.h  undistorter_rad_tan.h
include/util/: converter.h  dataset_reader.h  frame_shell.h  global_calib.h  global_funcs.h  image_and_exposure.h  index_thread_reduce.h  input_param.h  input_parser.h  minimal_image.h  nanoflann.h  num_type.h  settings.h
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: PointCloudOutputWrapper.h  SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h
src/full_system/: full_system.cc  full_system_debug_stuff.cc  full_system_marginalize.cc  full_system_opt_point.cc  full_system_optimize.cc  immature_point.cc  pixel_selector2.cc  residuals.cc
src/full_system/hessian_blocks/: frame_frame_pre_calc.cc  frame_hessian.cc  point_hessian.cc
src/full_system/initializer/: coarse_initializer.cc
src/full_system/tracker/: coarse_distance_map.cc  coarse_tracker.cc
src/io_wrapper/: image_display_dummy.cc  image_rw_dummy.cc
src/io_wrapper/opencv/: image_display.cc  image_rw.cc
src/io_wrapper/pangolin/: keyframe_display.cc  pangolin_dso_viewer.cc
src/optimization_backend/: accumulated_sc_hessian_sse.cc  accumulated_top_hessian_sse.cc
src/optimization_backend/accumulators/: accumulator_14.cc  accumulator_9.cc  accumulator_approx.cc
src/optimization_backend/energy_functional/: ef_frame.cc  ef_point.cc  ef_residual.cc  energy_functional.cc
src/undistorter/: photometric_undistorter.cc  undistorter.cc  undistorter_equidistant.cc  undistorter_fov.cc  undistorter_kb.cc  undistorter_pinhole.cc  undistorter_rad_tan.cc
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  converter.cc  dataset_reader.cc  globalCalib.cpp  globalCalib.h  globalFuncs.h  global_calib.cc  input_parser.cc  nanoflann.h  settings.cc  settings.cpp  settings.h
